test/semantic-errors/4.pas
program p;
writeln("");
begin writeln(1)end.
